@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-21T01:00:02Z",
+  "timestamp" : "2024-08-27T01:01:46Z",
   "count_outdated" : 492,
   "uniques_outdated" : 319,
-  "count" : 496,
-  "uniques" : 323,
+  "count" : 497,
+  "uniques" : 324,
   "clones" : [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
