@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 5,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2024-08-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
